--- a/more.html
+++ b/more.html
@@ -35,6 +35,98 @@
       </div>
     </div>
   </header>
+  <main class="more">
+    <header class="more_header">
+      <div class="more__header-column">
+        <img src="images/profile_jjong.png" alt="  ">
+        <div class="more__header-info">
+          <h3 class="more__header-title">
+            JONGHYUN
+          </h3>
+          <span class="more__header-subtitle">
+            shiee.jonghyun@gmail.com
+          </span>
+        </div>
+      </div>
+      <i class="far fa-comment-alt fa-2x"></i>
+    </header>
+    <section class="more__options">
+      <div class="more__options">
+        <i class="far fa-smile fa-lg"></i>
+        <span class="more__options-title">Emoticons</span>
+      </div>
+      <div class="more__options">
+        <i class="far fa-edit fa-lg"></i>
+        <span class="more__options-title">Themes</span>
+      </div>
+      <div class="more__options">
+        <i class="far fa-hand-spock fa-lg"></i>
+        <span class="more__options-title">Plus Friend</span>
+      </div>
+      <div class="more__options">
+        <i class="far fa-user-circle fa-lg"></i>
+        <span class="more__options-title">Account</span>
+      </div>
+    </section>
+    <section class="more__plus-friends">
+      <header class="plus-friends__header">
+        <h2 class="plus-friends__title">Plus Friends</h2>
+        <span class="plus-friends__learn-more">
+          <i class="fa fa-info-circle">
+            Learn More
+          </i>
+        </span>
+      </header>
+      <div class="plus-friends__items">
+        <div class="plus-friends__item">
+          <i class="fa fa-utensils"></i>
+          <span class="plus-friends__item-title">Order</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fa fa-shopping-cart"></i>
+          <span class="plus-friends__item-title">Store</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fa fa-tv"></i>
+          <span class="plus-friends__item-title">TV Channel/Radio...</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fa fa-pencil-alt"></i>
+          <span class="plus-friends__item-title">Creation</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fa fa-graduation-cap"></i>
+          <span class="plus-friends__item-title">Education</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fa fa-university"></i>
+          <span class="plus-friends__item-title">Politics/Society</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fa fa-won-sign"></i>
+          <span class="plus-friends__item-title">Finance</span>
+        </div>
+        <div class="plus-friends__item">
+          <i class="fa fa-video"></i>
+          <span class="plus-friends__item-title">Movies/Music</span>
+        </div>
+      </div>
+    </section>
+    <section class="more__options">
+      <div class="more__options">
+        <img src="images/kakao-story.png" alt="" class="more__options-image">
+        <span class="more__options-title">Kakao Story</span>
+      </div>
+      <div class="more__options">
+        <img src="images/path.png" alt="" class="more__options-image">
+        <span class="more__options-title">Path</span>
+      </div>
+      <div class="more__options">
+        <img src="images/kakao-friends.png" alt="" class="more__options-image">
+        <span class="more__options-title">Kakao Friends</span>
+      </div>
+    </section>
+  </main>
   <nav class="tab-bar">
     <a href="index.html" class="tab-bar__tab">
       <i class="fa fa-user"></i>
