--- a/chat.html
+++ b/chat.html
@@ -35,5 +35,36 @@
       </div>
     </div>
   </header>
+  <main class="chat">
+    <div class="date-divider">
+      <span class="date-divider__text">Wednesday, August 2, 2017</span>
+    </div>
+    <div class="chat__message chat__message--from-me">
+      <span class="chat__message-time">17:55</span>
+      <span class="chat__message-body">
+        Hello! This is a test message
+      </span>
+    </div>
+    <div class="chat__message chat__message--to-me">
+      <img src="images/profile_jjong.png" class="chat__message-avatar">
+      <div class="chat__message-center">
+        <h3 class="chat__message-username">JONGHYUN</h3>
+        <span class="chat__message-body">
+          And this is an answer.
+        </span>
+      </div>
+      <span class="chat__message-time">19:30</span>
+    </div>
+  </main>
+  <div class="type-message">
+    <i class="fa fa-plus fa-2x"></i>
+    <div class="type-message__input">
+      <input type="text">
+      <i class="far fa-smile"></i>
+      <span class="record-message">
+        <i class="fa fa-microphone"></i>
+      </span>
+    </div>
+  </div>
 </body>
 </html>
