--- a/chats.html
+++ b/chats.html
@@ -39,28 +39,32 @@
     </div>
     <ul class="chats__list">
       <li class="chats__chat">
-        <div class="chat__contents">
-          <img src="images/profile_jjong.png">
-          <div class="chat__preview">
-            <h3 class="chat__user">JONGHYUN</h3>
-            <span class="chat__last-message">Hello! This is a test message</span>
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/profile_jjong.png">
+            <div class="chat__preview">
+              <h3 class="chat__user">JONGHYUN</h3>
+              <span class="chat__last-message">Hello! This is a test message</span>
+            </div>
           </div>
           <span class="chat__date-time">
             15:55
           </span>
-        </div>
+        </a>
       </li>
       <li class="chats__chat">
-        <div class="chat__contents">
-          <img src="images/profile_jjong.png">
-          <div class="chat__preview">
-            <h3 class="chat__user">KakaoTalk</h3>
-            <span class="chat__last-message">You logged into KakaoTalk PC from the PC</span>
+        <a href="chat.html"></a>
+          <div class="chat__contents">
+            <img src="images/profile_jjong.png">
+            <div class="chat__preview">
+              <h3 class="chat__user">KakaoTalk</h3>
+              <span class="chat__last-message">You logged into KakaoTalk PC from the PC</span>
+            </div>
           </div>
           <span class="chat__date-time">
             July 29
           </span>
-        </div>
+        </a>          
       </li>
     </ul>
     <div class="chat__btn">
