Chat + Back to page links.

--- a/chat.html
+++ b/chat.html
@@ -25,13 +25,16 @@
     </div>
     <div class="header__bottom">
       <div class="header__cloumn">
-        <span class="header__text"><i class="fas fa-chevron-left fa-lg"></i></span>
+        <a href="chats.html">
+        <i class="fas fa-chevron-left fa-lg"></i>
+        </a>
       </div>
       <div class="header__cloumn">
         <span class="header__text">JONGHYUN</span>
       </div>
       <div class="header__cloumn">
-        <span class="header__text"><i class="fas fa-search fa-lg"></i><i class="fas fa-bars fa-lg"></i></span>
+        <i class="fas fa-search fa-lg"></i>
+        <i class="fas fa-bars fa-lg"></i>
       </div>
     </div>
   </header>
