--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-          <img src="" alt=""><span class="friends__section-name">JONGHYUN</span>
+          <a href="profile.html">
+            <img src="images/profile_jjong.png" alt=""><span class="friends__section-name">JONGHYUN</span>
+          </a>
         </div>
         <div class="friends__section-row">
-          <img src="" alt=""><span class="friends__section-name">Friends' Names Display</span>
+          <img src="images/profile_jjong.png" alt=""><span class="friends__section-name">Friends' Names Display</span>
         </div>
       </div>
     </section>
@@ -60,7 +62,7 @@
       <div class="friends__section-rows">
         <div class="friends__section-row">
           <div class="friends_section-column">
-            <img src="" alt=""><span class="friends__section-name">JIEUN</span>
+            <img src="images/profile_jjong.png" alt=""><span class="friends__section-name">JIEUN</span>
           </div>
           <span class="friends__section-tagline">
             Life is short. So live your life.
