--- a/profile.html
+++ b/profile.html
@@ -25,15 +25,38 @@
     </div>
     <div class="header__bottom">
       <div class="header__cloumn">
-        <span class="header__text"><i class="fas fa-times fa-lg"></i></span>
+        <a href="index.html">
+        <i class="fas fa-times fa-lg"></i>
+        </a>
       </div>
       <div class="header__cloumn">
 
       </div>
       <div class="header__cloumn">
-        <span class="header__text"><i class="fas fa-user fa-lg"></i></span>
+        <i class="fas fa-user fa-lg"></i>
       </div>
     </div>
   </header>
+  <main class="profile">
+    <header class="profile__header">
+      <img src="images/profile_jjong.png" alt="">
+      <h3 class="profile__header-title">JONGHYUN</h3>
+      <input type="text" placeholder="shinee.jonghyun@gmail.com">
+      <div class="profile__actions">
+        <div class="profile__action">
+          <span class="profile__action-circle">
+            <i class="fa fa-comment"></i>
+          </span>
+          <span class="profile__action-title">My Chatroom</span>
+        </div>
+        <div class="profile__action">
+          <span class="profile__action-circle">
+            <i class="fa fa-pencil-alt"></i>
+          </span>
+          <span class="profile__action-title">Edit Profile</span>
+        </div>
+      </div>
+    </header>
+  </main>
 </body>
 </html>
