--- a/chats.html
+++ b/chats.html
@@ -6,9 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <title>Chats</title>
+  <link rel="stylesheet" href="css/style.css">x
 </head>
 <body>
-  <header>
+  <header class="top-header">
     <div class="header__top">
       <div class="header__column">
         <i class="fas fa-plane"></i>
@@ -64,7 +65,7 @@
           <span class="chat__date-time">
             July 29
           </span>
-        </a>          
+        </a>
       </li>
     </ul>
     <div class="chat__btn">
