--- a/chats.html
+++ b/chats.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
   <title>Chats</title>
-  <link rel="stylesheet" href="css/style.css">x
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="top-header">
@@ -21,7 +21,8 @@
       <div class="header__column">
         <i class="far fa-moon"></i>
         <i class="fab fa-bluetooth-b"></i>
-        <span class="header__battery">66%</span><i class="fas fa-battery-full"></i>
+        <span class="header__battery">66%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <div class="header__bottom">
@@ -29,13 +30,18 @@
         <span class="header__text">Edit</span>
       </div>
       <div class="header__cloumn">
-        <span class="header__text">Chats<i class="fas fa-sort-down"></i></span>
+        <span class="header__text">Chats
+          <i class="fas fa-sort-down"></i>
+        </span>
+      </div>
+      <div class="header__cloumn">
+        <span class="header__text">&nbsp;&nbsp;&nbsp;&nbsp;</span>
       </div>
     </div>
   </header>
   <main class="chats">
     <div class="search-bar">
-      <i class="fa fa-searh"></i>
+      <i class="fa fa-search"></i>
       <input type="text" placeholder="Find friends, chats, Plus Friends">
     </div>
     <ul class="chats__list">
@@ -44,8 +50,8 @@
           <div class="chat__contents">
             <img src="images/profile_jjong.png">
             <div class="chat__preview">
-              <h3 class="chat__user">JONGHYUN</h3>
-              <span class="chat__last-message">Hello! This is a test message</span>
+              <h3 class="chat__user">김종현</h3>
+              <span class="chat__last-message">공연 어땠어?</span>
             </div>
           </div>
           <span class="chat__date-time">
@@ -54,12 +60,124 @@
         </a>
       </li>
       <li class="chats__chat">
-        <a href="chat.html"></a>
+        <a href="chat.html">
           <div class="chat__contents">
-            <img src="images/profile_jjong.png">
+            <img src="images/img_3.jpeg">
             <div class="chat__preview">
-              <h3 class="chat__user">KakaoTalk</h3>
-              <span class="chat__last-message">You logged into KakaoTalk PC from the PC</span>
+              <h3 class="chat__user">이태민</h3>
+              <span class="chat__last-message">와이낫 더 댄서 많이 시청해주세요!</span>
+            </div>
+          </div>
+          <span class="chat__date-time">
+            July 29
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/img_1.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">푸른밤 쫑디</h3>
+              <span class="chat__last-message">뭐랄까...</span>
+            </div>
+          </div>
+          <span class="chat__date-time">
+            15:55
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/Shinee.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">샤이니 공식 계정</h3>
+              <span class="chat__last-message">너네가 짱이야</span>
+            </div>
+          </div>
+          <span class="chat__date-time">
+            July 29
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/img_5.png">
+            <div class="chat__preview">
+              <h3 class="chat__user">김기범</h3>
+              <span class="chat__last-message">브레이커스 많이 사랑해주세요!</span>
+            </div>
+          </div>
+          <span class="chat__date-time">
+            15:55
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/img_2.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">공룡아</h3>
+              <span class="chat__last-message">난 잘 있어.</span>
+            </div>
+          </div>
+          <span class="chat__date-time">
+            July 29
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/img_4.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">종현이 천재</h3>
+              <span class="chat__last-message">야 인정?</span>
+            </div>
+          </div>
+          <span class="chat__date-time">
+            15:55
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/img_6.png">
+            <div class="chat__preview">
+              <h3 class="chat__user">유지은</h3>
+              <span class="chat__last-message">From Now On 노래 짱조음</span>
+            </div>
+          </div>
+          <span class="chat__date-time">
+            July 29
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/img_7.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">TAEMIN</h3>
+              <span class="chat__last-message">나 쫌 멋있는 듯</span>
+            </div>
+          </div>
+          <span class="chat__date-time">
+            15:55
+          </span>
+        </a>
+      </li>
+      <li class="chats__chat">
+        <a href="chat.html">
+          <div class="chat__contents">
+            <img src="images/img_8.jpg">
+            <div class="chat__preview">
+              <h3 class="chat__user">쫑</h3>
+              <span class="chat__last-message">언제나 곁에 있어</span>
             </div>
           </div>
           <span class="chat__date-time">
