Find html and css is done!

--- a/find.html
+++ b/find.html
@@ -25,11 +25,14 @@
       </div>
     </div>
     <div class="header__bottom">
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header__text">Edit</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header__text">Find</span>
+      </div>
+      <div class="header__column">
+
       </div>
     </div>
   </header>
