--- a/chats.html
+++ b/chats.html
@@ -26,16 +26,16 @@
       </div>
     </div>
     <div class="header__bottom">
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header__text">Edit</span>
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header__text">Chats
           <i class="fas fa-sort-down"></i>
         </span>
       </div>
-      <div class="header__cloumn">
-        <span class="header__text">&nbsp;&nbsp;&nbsp;&nbsp;</span>
+      <div class="header__column">
+
       </div>
     </div>
   </header>
