--- a/more.html
+++ b/more.html
@@ -21,50 +21,53 @@
       <div class="header__column">
         <i class="far fa-moon"></i>
         <i class="fab fa-bluetooth-b"></i>
-        <span class="header__battery">66%</span><i class="fas fa-battery-full"></i>
+        <span class="header__battery">66%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <div class="header__bottom">
-      <div class="header__cloumn">
-        <span class="header__text"></span>
+      <div class="header__column">
+
       </div>
-      <div class="header__cloumn">
+      <div class="header__column">
         <span class="header__text">More</span>
       </div>
-      <div class="header__cloumn">
-        <span class="header__text"><i class="fas fa-cog fa-lg"></i></span>
+      <div class="header__column">
+        <span class="header__text">
+          <i class="fas fa-cog fa-lg"></i>
+        </span>
       </div>
     </div>
   </header>
   <main class="more">
-    <header class="more_header">
+    <header class="more__header">
       <div class="more__header-column">
-        <img src="images/profile_jjong.png" alt="  ">
+        <img src="images/profile_jjong.png">
         <div class="more__header-info">
           <h3 class="more__header-title">
-            JONGHYUN
+            김종현
           </h3>
           <span class="more__header-subtitle">
             shiee.jonghyun@gmail.com
           </span>
         </div>
       </div>
-      <i class="far fa-comment-alt fa-2x"></i>
+      <i class="far fa-comment-alt fa-lg"></i>
     </header>
     <section class="more__options">
-      <div class="more__options">
+      <div class="more__option">
         <i class="far fa-smile fa-lg"></i>
         <span class="more__options-title">Emoticons</span>
       </div>
-      <div class="more__options">
+      <div class="more__option">
         <i class="far fa-edit fa-lg"></i>
         <span class="more__options-title">Themes</span>
       </div>
-      <div class="more__options">
+      <div class="more__option">
         <i class="far fa-hand-spock fa-lg"></i>
         <span class="more__options-title">Plus Friend</span>
       </div>
-      <div class="more__options">
+      <div class="more__option">
         <i class="far fa-user-circle fa-lg"></i>
         <span class="more__options-title">Account</span>
       </div>
@@ -113,18 +116,18 @@
         </div>
       </div>
     </section>
-    <section class="more__options">
-      <div class="more__options">
-        <img src="images/kakao-story.png" alt="" class="more__options-image">
-        <span class="more__options-title">Kakao Story</span>
+    <section class="more__links">
+      <div class="more__option">
+        <img src="images/kakao-story.png" class="more__options-image">
+        <span class="more__options-title">Kakao<br>Story</span>
       </div>
-      <div class="more__options">
-        <img src="images/path.png" alt="" class="more__options-image">
+      <div class="more__option">
+        <img src="images/path.png" class="more__options-image">
         <span class="more__options-title">Path</span>
       </div>
-      <div class="more__options">
-        <img src="images/kakao-friends.png" alt="" class="more__options-image">
-        <span class="more__options-title">Kakao Friends</span>
+      <div class="more__option">
+        <img src="images/kakao-friends.png" class="more__options-image">
+        <span class="more__options-title">Kakao<br>Friends</span>
       </div>
     </section>
   </main>
