--- a/find.html
+++ b/find.html
@@ -21,7 +21,8 @@
       <div class="header__column">
         <i class="far fa-moon"></i>
         <i class="fab fa-bluetooth-b"></i>
-        <span class="header__battery">66%</span><i class="fas fa-battery-full"></i>
+        <span class="header__battery">66%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <div class="header__bottom">
