--- a/chat.html
+++ b/chat.html
@@ -8,8 +8,8 @@
   <title>Chat</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-  <header class="top-header">
+<body class="body-chat">
+  <header class="top-header chat_header">
     <div class="header__top">
       <div class="header__column">
         <i class="fas fa-plane"></i>
@@ -21,21 +21,22 @@
       <div class="header__column">
         <i class="far fa-moon"></i>
         <i class="fab fa-bluetooth-b"></i>
-        <span class="header__battery">66%</span><i class="fas fa-battery-full"></i>
+        <span class="header__battery">66%</span>
+        <i class="fas fa-battery-full"></i>
       </div>
     </div>
     <div class="header__bottom">
       <div class="header__cloumn">
         <a href="chats.html">
-        <i class="fas fa-chevron-left fa-lg"></i>
+        <i class="fas fa-chevron-left"></i>
         </a>
       </div>
       <div class="header__cloumn">
         <span class="header__text">JONGHYUN</span>
       </div>
       <div class="header__cloumn">
-        <i class="fas fa-search fa-lg"></i>
-        <i class="fas fa-bars fa-lg"></i>
+        <i class="fas fa-search"></i>
+        <i class="fas fa-bars"></i>
       </div>
     </div>
   </header>
@@ -61,7 +62,7 @@
     </div>
   </main>
   <div class="type-message">
-    <i class="fa fa-plus fa-2x"></i>
+    <i class="fa fa-plus fa-lg"></i>
     <div class="type-message__input">
       <input type="text">
       <i class="far fa-smile"></i>
