--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <span class="header__text">Friends <span class="header__number">1</span></span>
       </div>
       <div class="header__column">
-        <i class="fas fa-cog fa"></i>
+        <i class="fas fa-cog"></i>
       </div>
     </div>
   </header>
@@ -48,7 +48,7 @@
       </header>
       <div class="friends__section-rows">
         <div class="friends__section-row">
-            <img src="images/img_2.jpg">
+            <img src="images/img_8.jpg">
             <a href="profile.html" class="friends__section-name">JONGHYUN</a>
         </div>
         <div class="friends__section-row">
