--- a/more.html
+++ b/more.html
@@ -34,7 +34,7 @@
       </div>
       <div class="header__column">
         <span class="header__text">
-          <i class="fas fa-cog fa-lg"></i>
+          <i class="fas fa-cog"></i>
         </span>
       </div>
     </div>
