--- a/profile.html
+++ b/profile.html
@@ -63,7 +63,9 @@
           </div>
         </div>
       </div>
-
   </main>
+  <div class="bigScreenText">
+    <span>Please make your screen smaller</span>
+  </div>
 </body>
 </html>
