--- a/chat.html
+++ b/chat.html
@@ -62,13 +62,16 @@
     </div>
   </main>
   <div class="type-message">
-    <i class="fa fa-plus fa-lg"></i>
+    <i class="far fa-plus-square fa-lg"></i>
     <div class="type-message__input">
       <input type="text">
       <i class="far fa-smile"></i>
+      <i class="fas fa-hashtag"></i>
+      <!--
       <span class="record-message">
         <i class="fa fa-microphone"></i>
       </span>
+      -->
     </div>
   </div>
   <div class="bigScreenText">
